--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.DS_Store
+.dev/
+error_log
+php_errorlog
+
+.env
+
+temp/
 node_modules/
-main.js
-style.css
+npm-debug.log
+.nodemonignore
+.sass-cache/
